<resources>
    <string name="app_name">ChatApp</string>
    <string name="splashscreenlogo">SplashScreenLogo</string>
    <string name="tanulogo">TanuLogo</string>
    <string name="app_name2">TANU Chat App</string>
    <string name="login">LogIn</string>
    <string name="signup">SignUp</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="username">Username</string>
    <string name="reg_no">Reg Number</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="have_an_account">Have an account?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="profile">Profile</string>
    <string name="users">Users</string>
    <string name="messages">Messages</string>
    <string name="title_activity_messages">MessagesActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="name">Name</string>
    <string name="save_profile">Save Profile</string>
    <string name="change_password">Change Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="new_password">New Password</string>
    <string name="old_password">Old Password</string>
    <string name="logout">Logout</string>
    <string name="type_a_message">Type a message…</string>
    <string name="hello">hello</string>
    <string name="search">Search...</string>
    <string name="reset">Reset</string>
    <string name="reset_message">By clicking Reset,
        you will receive an email to reset your password</string>
    <string name="no_message">No Message</string>
</resources>
