<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SignupActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
                android:text="@string/create_a_new_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView4"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="#000"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintHorizontal_bias="0.497"
                android:layout_marginTop="40dp"/>

        <com.rengwuxian.materialedittext.MaterialEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:met_floatingLabel="normal"
                android:hint="@string/username"
                android:inputType="text"
                android:drawableLeft="@drawable/ic_person"
                android:drawablePadding="4dp"
                app:layout_constraintTop_toBottomOf="@+id/textView4"
                android:layout_marginTop="60dp"
                android:id="@+id/signup_user"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"/>

        <com.rengwuxian.materialedittext.MaterialEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:met_floatingLabel="normal"
                android:hint="@string/reg_no"
                android:inputType="text"
                android:drawableLeft="@drawable/ic_person"
                android:drawablePadding="4dp"
                app:layout_constraintTop_toBottomOf="@+id/signup_user"
                android:layout_marginTop="40dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:id="@+id/signup_reg"/>

        <com.rengwuxian.materialedittext.MaterialEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:met_floatingLabel="normal"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:drawableLeft="@drawable/ic_email"
                android:drawablePadding="4dp"
                app:layout_constraintTop_toBottomOf="@+id/signup_reg"
                android:layout_marginTop="40dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:id="@+id/signup_email"/>

        <com.rengwuxian.materialedittext.MaterialEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:met_floatingLabel="normal"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:drawableLeft="@drawable/ic_lock"
                android:drawablePadding="4dp"
                app:layout_constraintTop_toBottomOf="@+id/signup_email"
                android:layout_marginTop="40dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:id="@+id/signup_pwd"/>

        <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/signup"
                android:textAllCaps="false"
                android:textColor="#fff"
                android:textSize="20sp"
                android:background="@drawable/btn_disabled"
                app:layout_constraintTop_toBottomOf="@+id/signup_pwd"
                android:layout_marginTop="40dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:id="@+id/signup_btn"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/have_an_account"
                android:textColor="#000"
                android:textSize="16sp"
                android:id="@+id/textView2"
                app:layout_constraintTop_toBottomOf="@+id/signup_btn"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="90dp"
                android:layout_marginTop="20dp"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textColor="#0A4A7E"
                android:textSize="16sp"
                android:padding="6dp"
                app:layout_constraintTop_toBottomOf="@+id/signup_btn"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="92dp"
                android:layout_marginTop="14dp"
                android:id="@+id/login_link"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>