<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fff"
        tools:context=".LoginActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/chatapplogo"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginBottom="200dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                android:contentDescription="@string/splashscreenlogo"
                android:id="@+id/imageView3"
                app:layout_constraintVertical_bias="0.097"
                app:layout_constraintHorizontal_bias="0.494"/>

        <com.rengwuxian.materialedittext.MaterialEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:met_floatingLabel="normal"
                android:hint="@string/email"
                android:drawableLeft="@drawable/ic_email"
                android:drawablePadding="4dp"
                android:inputType="textEmailAddress"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="40dp"
                app:layout_constraintTop_toBottomOf="@+id/imageView3"
                android:id="@+id/login_email"/>

        <com.rengwuxian.materialedittext.MaterialEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:met_floatingLabel="normal"
                android:hint="@string/password"
                android:drawableLeft="@drawable/ic_lock"
                android:drawablePadding="4dp"
                android:inputType="textPassword"
                android:layout_marginTop="40dp"
                app:layout_constraintTop_toBottomOf="@+id/login_email"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:id="@+id/login_pwd"/>

        <Button
                android:id="@+id/login_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textColor="#fff"
                android:textSize="20sp"
                android:textAllCaps="false"
                android:background="@drawable/btn_disabled"
                android:layout_marginTop="70dp"
                app:layout_constraintTop_toBottomOf="@+id/login_pwd"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/don_t_have_an_account"
                android:textColor="#000"
                android:textSize="16sp"
                android:id="@+id/textView2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/login_btn"
                android:layout_marginStart="72dp"
                android:layout_marginTop="20dp"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signup"
                android:textColor="#0A4A7E"
                android:textSize="16sp"
                android:padding="6dp"
                android:id="@+id/signup_link"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/login_btn"
                android:layout_marginEnd="56dp"
                android:layout_marginTop="14dp"/>

        <TextView
                android:text="@string/forgot_password"
                android:textColor="#0A4A7E"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView3"
                android:layout_marginTop="20dp"
                android:padding="6dp"
                app:layout_constraintTop_toBottomOf="@+id/login_pwd"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>