<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fff"
        tools:context=".MainActivity">
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/tanulogo"
            android:id="@+id/imageView2"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:contentDescription="@string/tanulogo"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintVertical_bias="0.297"/>
    <TextView
            android:text="@string/app_name2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:textSize="26sp"
            android:textStyle="bold"
            android:textColor="#223288"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/imageView2"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintVertical_bias="0.593"/>
    <Button
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:textSize="20sp"
            android:background="@drawable/login_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/login_btn"
            android:layout_marginTop="124dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView2"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.0"/>
    <Button
            android:text="@string/signup"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:textSize="20sp"
            android:background="@drawable/signup_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/signup_btn"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/login_btn"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.259"/>
</androidx.constraintlayout.widget.ConstraintLayout>