<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".ProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <com.mikhaellopez.circularimageview.CircularImageView
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:src="@drawable/ic_person"
                android:layout_marginTop="30dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintHorizontal_bias="0.497"
                android:id="@+id/profile_image"/>

        <ImageView
                android:src="@drawable/ic_profile"
                android:layout_width="30dp"
                android:layout_height="40dp"
                android:id="@+id/imageView5"
                android:layout_marginTop="48dp"
                app:layout_constraintTop_toBottomOf="@+id/profile_image"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="30dp"/>
        <TextView
                android:text="@string/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView5"
                android:textColor="#000"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@+id/profile_image"
                app:layout_constraintStart_toEndOf="@+id/imageView5"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"/>
        <TextView
                android:text="TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/name_profile"
                android:textColor="#000"
                android:textSize="26sp"
                android:layout_marginStart="30dp"
                app:layout_constraintStart_toEndOf="@+id/imageView5"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/textView5"/>

        <ImageView
                android:src="@drawable/ic_profile"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:id="@+id/imageView6"
                android:layout_marginTop="56dp"
                app:layout_constraintTop_toBottomOf="@+id/imageView5"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="30dp"/>
        <TextView
                android:text="@string/reg_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView7"
                android:textColor="#000"
                android:textSize="16sp"
                android:layout_marginTop="30dp"
                app:layout_constraintTop_toBottomOf="@+id/name_profile"
                android:layout_marginStart="30dp"
                app:layout_constraintStart_toEndOf="@+id/imageView6"/>
        <TextView
                android:text="TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000"
                android:textSize="26sp"
                android:id="@+id/regNo_profile"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/textView7"
                app:layout_constraintStart_toEndOf="@+id/imageView6"
                android:layout_marginStart="30dp"/>

        <ImageView
                android:src="@drawable/ic_email_profile"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:id="@+id/imageView7"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="30dp"
                android:layout_marginTop="64dp"
                app:layout_constraintTop_toBottomOf="@+id/imageView6"/>
        <TextView
                android:text="@string/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView9"
                android:textColor="#000"
                android:textSize="16sp"
                android:layout_marginTop="30dp"
                app:layout_constraintTop_toBottomOf="@+id/regNo_profile"
                android:layout_marginStart="30dp"
                app:layout_constraintStart_toEndOf="@+id/imageView7"/>
        <TextView
                android:text="TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/email_profile"
                android:textColor="#000"
                android:textSize="26sp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/textView9"
                app:layout_constraintStart_toEndOf="@+id/imageView7"
                android:layout_marginStart="30dp"/>
        <Button
                android:text="@string/edit_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#448AFF"
                android:background="@drawable/edit_profile_btn"
                android:id="@+id/edit_profile_btn"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="30dp"
                android:layout_marginTop="48dp"
                app:layout_constraintTop_toBottomOf="@+id/email_profile"/>

        <Button
                android:id="@+id/logout_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/edit_profile_btn"
                android:text="@string/logout"
                android:textColor="#448AFF"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/email_profile" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>